island count with depth first traversal and with one extra tip of row/column inbound

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -43,6 +43,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(4, 5), (8, 0), (9, 1)}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = {(4,5), (8,0), (9,1)}\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (4,6) in l:\n",
+    "    print('voilaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
