added cansum with memorization - remember the trick is to save the value in memo before returing it from the func

--- a/dynamic_programming/dynamic_programming.ipynb
+++ b/dynamic_programming/dynamic_programming.ipynb
@@ -70,6 +70,7 @@
     "    # Base case as the 1st 2 numbers of the fibonacci series are 1\n",
     "    if n <= 2:\n",
     "        return 1\n",
+    "    # ! remember this the trick to memorization is to save the value in memo before returning it\n",
     "    # store the answer in the memo\n",
     "    memo[n] = fibnumber(n - 1, memo) + fibnumber(n - 2, memo)\n",
     "    # return the answer from the memo\n",
@@ -153,6 +154,7 @@
     "    if r == 0 or c == 0:\n",
     "        return 0\n",
     "\n",
+    "    # ! remember this the trick to memorization is to save the value in memo before returning it\n",
     "    memo[(r,c)] =  gridTravellerBasic(r - 1, c, memo) + gridTravellerBasic(r, c - 1, memo)\n",
     "    return memo[(r,c)]\n",
     "\n",
@@ -161,6 +163,118 @@
     "print(gridTravellerBasic(2, 3))\n",
     "print(gridTravellerBasic(3, 2))\n",
     "print(gridTravellerBasic(3, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CanSum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cansum(target, num_arr):\n",
+    "    if target < 0:\n",
+    "        return False\n",
+    "\n",
+    "    if target == 0:\n",
+    "        return True\n",
+    "\n",
+    "    for i in num_arr:\n",
+    "        return cansum(target - i, num_arr)\n",
+    "\n",
+    "\n",
+    "result = cansum(7, [1, 4])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#! Optimization via returning early.\n",
+    "def cansum(target, num_arr):\n",
+    "    if target < 0:\n",
+    "        return False\n",
+    "\n",
+    "    if target == 0:\n",
+    "        return True\n",
+    "\n",
+    "    for i in num_arr:\n",
+    "        # as we have specified in the basecase the return value is either true or false. Meaning if any one of the recursive call hit the base case True then we can stop the recursion and return early.\n",
+    "        remainder = target - i\n",
+    "        if cansum(remainder, num_arr):\n",
+    "            return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "result = cansum(7, [3, 2])\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#! Optimization via returning early.\n",
+    "def cansum(target, num_arr, memo = {}):\n",
+    "    if target < 0:\n",
+    "        return False\n",
+    "\n",
+    "    if target == 0:\n",
+    "        return True\n",
+    "    \n",
+    "    if target in memo:\n",
+    "        return memo[target]\n",
+    "\n",
+    "    for i in num_arr:\n",
+    "        # as we have specified in the basecase the return value is either true or false. Meaning if any one of the recursive call hit the base case True then we can stop the recursion and return early.\n",
+    "        remainder = target - i\n",
+    "        if cansum(remainder, num_arr):\n",
+    "            # ! remember this the trick to memorization is to save the value in memo before returning it\n",
+    "            memo[target] = True\n",
+    "            return True\n",
+    "    # ! remember this the trick to memorization is to save the value in memo before returning it\n",
+    "    memo[target] = False\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "result = cansum(7, [3, 2])\n",
+    "print(result)\n"
    ]
   },
   {
