how sum with base case of empty list if the path is found. for more info see the tip in example

--- a/dynamic_programming/dynamic_programming.ipynb
+++ b/dynamic_programming/dynamic_programming.ipynb
@@ -278,6 +278,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HOWSUM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def howsum(target, num_arr):\n",
+    "    if target < 0:\n",
+    "        return None\n",
+    "\n",
+    "    if target == 0:\n",
+    "        #! whenever we want to evaluate the path or the values used to obtain the final result, we 1st start with the empty list and then add the values to this empty list when the solution is found.\n",
+    "        return []\n",
+    "\n",
+    "    for i in num_arr:\n",
+    "        # as we have specified in the basecase the return value is either true or false. Meaning if any one of the recursive call hit the base case True then we can stop the recursion and return early.\n",
+    "        remainder = target - i\n",
+    "        remainderResult = howsum(remainder, num_arr)\n",
+    "        if remainderResult is not None:\n",
+    "            #! if remainderResult is non None that means we've evaluated the soultion and now we can add the result\n",
+    "            remainderResult.append(i)\n",
+    "            return remainderResult\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "result = howsum(7, [3, 2])\n",
+    "print(result)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
