Best sum memorization - deep copy is required while assigning or returning anything from the memo dict

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -74,6 +74,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bestSum(target, num_arr):\n",
+    "    if target < 0:\n",
+    "        return None\n",
+    "\n",
+    "    if target == 0:\n",
+    "        return []\n",
+    "\n",
+    "    # ! here the for loop is trying out all the possible combinations. So, it's good idea to take the shortestCombination variable outside the for loop to track the shortestCombination\n",
+    "\n",
+    "    shortestCombination = None\n",
+    "\n",
+    "    for i in num_arr:\n",
+    "        remainder = target - i\n",
+    "        remainderResult = bestSum(remainder, num_arr)\n",
+    "        if remainderResult is not None:\n",
+    "            # ! We'll get inside this condition only when there is a path. Now, we need to see which path is the best\n",
+    "            # The below line will generate the path\n",
+    "            remainderResult.append(i)\n",
+    "            combination = remainderResult\n",
+    "\n",
+    "            # Logic to evaluate the shortestCombination possible. Notice we not returning early here. Even if we found the path. We're re-running the for-loop to evaluate all possible path and finally we're selecting the shortestCombination out of all\n",
+    "            if shortestCombination is None or len(shortestCombination) > len(\n",
+    "                combination\n",
+    "            ):\n",
+    "                shortestCombination = combination\n",
+    "\n",
+    "    return shortestCombination\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 4, 2]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestSum(10, [2, 4, 1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 2, 1, 3, 2, 4, 3, 4, 1]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestSumOptimized(10, [2, 4, 1, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
