added few visualizations

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -186,22 +186,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'visualiser'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/11/fvypv54d5sv2mxgs45b8wt6h0000gn/T/ipykernel_68079/3623574733.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Author: Bishal Sarang\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Import Visualiser class from module visualiser\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mvisualiser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvisualiser\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mVisualiser\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mvs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Add decorator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'visualiser'"
+     ]
     }
    ],
    "source": [
-    " "
+    "# Author: Bishal Sarang\n",
+    "# Import Visualiser class from module visualiser\n",
+    "from visualiser.visualiser import Visualiser as vs\n",
+    "\n",
+    "# Add decorator\n",
+    "# Decorator accepts optional arguments: ignore_args , show_argument_name, show_return_value and node_properties_kwargs\n",
+    "@vs(node_properties_kwargs={\"shape\":\"record\", \"color\":\"#f57542\", \"style\":\"filled\", \"fillcolor\":\"grey\"})\n",
+    "def fib(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fib(n=n - 1) + fib(n=n - 2)\n",
+    "\n",
+    "def main():\n",
+    "    # Call function\n",
+    "    print(fib(n=6))\n",
+    "    # Save recursion tree to a file\n",
+    "    vs.make_animation(\"fibonacci.gif\", delay=2)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
