Array - three sum

--- a/debug.ipynb
+++ b/debug.ipynb
@@ -359,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = [4,5,6,7,0,1,2]"
+    "nums = [4,5,6,7,0,1,2]"
    ]
   },
   {
@@ -393,6 +393,36 @@
    ],
    "source": [
     "bisect_left(arr[0:len(arr)], arr[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "dp = {nk:k for k,nk in enumerate(nums)} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4: 0, 5: 1, 6: 2, 7: 3, 0: 4, 1: 5, 2: 6}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dp"
    ]
   },
   {
